@@ -50,6 +50,8 @@
 
 using namespace scheme;
 
+jmp_buf ioReturnPoint;
+
 bool scheme::fileExistsP(const ucs4string& file)
 {
     FILE* stream = fopen(file.ascii_c_str(), "rb");
